syntax = "proto3";
package aether.locking.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "aether/locking/v1beta1/params.proto";
import "aether/locking/v1beta1/locking.proto";

option go_package = "github.com/aetherevm/locking/types";

// GenesisState defines the locking module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
  // LockedDelegation defines all the locked delegations on the system
  repeated LockedDelegation locked_delegations = 2
      [ (gogoproto.nullable) = false ];
}
